adicionando comentário de como fazer busca por datas